changed grid layout for tablet, giving drink menu more room. Fixed vertical overflow problem in mobile view. Plus small fixes.

--- a/css/meny.css
+++ b/css/meny.css
@@ -7,7 +7,7 @@
   margin: 0 auto;
   background-color: rgba(255, 166, 0, 0.8) /*var(--color-fifth)*/;
   width: 90%;
-  height: 100%;
+
   border: 1px solid #333;
   padding: 2%;
   padding-top: 0;
@@ -15,7 +15,7 @@
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(auto, 1fr);
   gap: 2%;
-  min-height: 150vh;
+  min-height: 200vh;
 }
 
 h2,
@@ -112,48 +112,49 @@ h3 {
 /*GRID TABLET*/
 @media screen and (min-width: 768px) and (max-width: 960px) {
   .menu-container {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(30, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
     margin-top: 2%;
     padding-top: 2%;
     row-gap: 1%;
     font-size: 80%;
   }
   .menu-heading {
-    grid-column: 1/4;
+    grid-column: 1/7;
     grid-row: 1/2;
     justify-self: center;
   }
   .drinks-part {
-    grid-column: 3/4;
+    grid-column: 4/7;
     grid-row: 2/30;
     gap: 0;
     display: flex;
     flex-flow: column wrap;
   }
   .starters-part {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 2/8;
   }
   .mains-part {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 8/18;
   }
   .childrens-part {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 18/24;
   }
   .desserts-part {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 24/30;
   }
 }
 
 /*GRID MOBILE*/
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .menu-container {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(auto, 1fr);
+    min-height: 450vh;
   }
   .menu-heading {
     grid-column: 1/2;
